1999-02-19  Andrew T. Veliath  <andrewtv@usa.net>

	* Configuration and versioning system overhauled.

1999-02-18  Andrew T. Veliath  <andrewtv@usa.net>

	* Update version to 0.5.10.

	* util.c (IDL_tree_properties_copy): New function.
	(IDL_parse_filename_with_input): Mostly ignore
	HAVE_CPP_PIPE_STDIN.

	* parser.y: Make codefrags work inside interfaces (only at outer
	level). Allow properties for operations and attributes, and change
	all XPIDL node properties to reside on the ident node.

1999-02-12  Andrew T. Veliath  <andrewtv@usa.net>

	* parser.y: Allow forward decls to be suppressed as well.

	* util.c (yyerrorl, yywarningl): Only call g_basename if we aren't
	piping input from CPP.

1999-02-11  Andrew T. Veliath  <andrewtv@usa.net>

	* Update version to 0.5.9.

1999-02-09  Tom Tromey  <tromey@cygnus.com>

	* libIDL.texi: Use @pxref and not @xref in parentheses.

1999-02-06  Andrew T. Veliath  <andrewtv@usa.net>

	* parser.y: Detect recursive structure members.

	* util.c (IDL_parse_filename_with_input): Assign filename hash
	before first call to callback.

	* parser.y: Allow const_dcl, type_dcl and except_dcl to also be
	inhibited.

	* util.c (load_inhibits): Allow any discriminator to be inhibited.

1999-01-02  Jeff Garzik  <jgarzik@pobox.com>

	* util.c:
	s/sprintf/g_snprintf/
	s/vsprintf/g_strdup_vprintf/
	Spaced out some code for readability.

1999-01-02 Raffaele Sena <raff@aromatic.com> via Russell Nelson <nelson@crynwr.com>

	* Fix to autogen.sh for build directory different from package
	top directory.

1998-12-16  Andrew T. Veliath  <andrewtv@usa.net>

	* Update version to 0.5.8

	* util.c (IDL_emit_IDL_ident): Use IDL_ns_scope_levels_from_here
	and parent from callback to automatically determine the minimal
	necessary scoping for the identifier; this should allow much more
	IDL from IDL_tree_to_IDL to be fed back unchanged.
	(IDL_tree_get_scope): New function.
	(IDL_tree_to_IDL): Updated to also take an IDL_ns parameter.  Use