@@ -41,9 +41,6 @@ PACKAGE=libIDL
 
 AM_INIT_AUTOMAKE($PACKAGE, $VERSION, no-define)
 
-AC_DEFINE_UNQUOTED(LIBIDL_MAJOR_VERSION, $LIBIDL_MAJOR_VERSION)
-AC_DEFINE_UNQUOTED(LIBIDL_MINOR_VERSION, $LIBIDL_MINOR_VERSION)
-AC_DEFINE_UNQUOTED(LIBIDL_MICRO_VERSION, $LIBIDL_MICRO_VERSION)
 AC_DEFINE_UNQUOTED(LIBIDL_INTERFACE_AGE, $LIBIDL_INTERFACE_AGE)
 AC_DEFINE_UNQUOTED(LIBIDL_BINARY_AGE, $LIBIDL_BINARY_AGE)
 AC_DEFINE_UNQUOTED(LIBIDL_VERSION, "$LIBIDL_VERSION")
