@@ -63,7 +63,8 @@ rm -rf $RPM_BUILD_ROOT
 
 %files
 %defattr(-,root,root)
-%doc COPYING ChangeLog AUTHORS README* NEWS BUGS
+%doc COPYING ChangeLog AUTHORS
+%doc README* NEWS BUGS tstidl.c
 %prefix/lib/lib*.so.*.*
 
 %files devel
