@@ -1,5 +1,8 @@
 1999-02-19  Andrew T. Veliath  <andrewtv@usa.net>
 
+	* parser.y: Properties for parameters moved before direction
+	keyword.
+
 	* Configuration and versioning system overhauled.
 
 1999-02-18  Andrew T. Veliath  <andrewtv@usa.net>
